fixing more arabic language bugs

--- a/Plateforme/templates/resources/list.html
+++ b/Plateforme/templates/resources/list.html
@@ -34,7 +34,7 @@
                            id="globalQuery" 
                            class="query-input" 
 
-                           placeholder="Search for resources..." 
+                           placeholder={% trans "Search for resources..." %}
 
                            autocomplete="off"
                            value="{{ request.GET.q|default:'' }}">
