--- a/Plateforme/templates/resources/tool_list.html
+++ b/Plateforme/templates/resources/tool_list.html
@@ -85,7 +85,7 @@
         </div>
         <div class="info-row">
           <span class="info-label">{% trans "Type:" %}</span>
-          <span class="info-value">{{ tool.get_tool_type_display }}</span>
+          <span class="info-value">{% trans {{ tool.get_tool_type_display }}%}</span>
         </div>
         <div class="info-row">
           <span class="info-label">{% trans "Author:" %}</span>
