--- a/Plateforme/templates/base.html
+++ b/Plateforme/templates/base.html
@@ -277,7 +277,7 @@
                 <div class="footer-grid">
                     <div class="footer-column">
                         <h4>{% trans "Arabic NLP Platform" %} </h4>
-                        <p>A {% trans "platform dedicated to advancing Arabic natural language processing through shared resources, tools, and community collaboration." %} platform dedicated to advancing Arabic natural language processing through shared resources, tools, and community collaboration.</p>
+                        <p>{% trans "platform dedicated to advancing Arabic natural language processing through shared resources, tools, and community collaboration." %}</p>
                         <div class="social-links">
                             <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                             <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
@@ -286,7 +286,7 @@
                         </div>
                     </div>
                     <div class="footer-column">
-                        <h4>Resources</h4>
+                        <h4>{% trans "Resources" %}</h4>
                         <ul class="footer-links">
                             <li><a href="{% url 'resources:corpus_list' %}">{% trans "Corpus" %} </a></li>
                             <li><a href="{% url 'resources:tool_list' %}">{% trans "Tools" %}</a></li>
