--- a/Plateforme/templates/resources/course_list.html
+++ b/Plateforme/templates/resources/course_list.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% load i18n %} {% block title %}{% trans "Courses"
-%}{% endblock title %} {% block extra_styles %} 
+{% extends "base.html" %} {% load i18n %} {% block title %}Courses{% endblock title %} {% block extra_styles %} 
 {% comment "Link to main.css managed in base.html" %}{% endcomment %} {% endblock %} {% block content %}
 <div class="container py-5">
   <!-- Header Section -->
@@ -9,6 +8,7 @@
       <p class="text-muted fs-5">
         {{ total_count }} {% trans "courses available" %}
       </p>
+
     </div>
     <div
       class="col-lg-4 col-md-5 d-flex align-items-center justify-content-md-end justify-content-start mt-3 mt-md-0"
