--- a/Plateforme/templates/resources/course_list.html
+++ b/Plateforme/templates/resources/course_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load i18n %} {% block title %}Courses{% endblock title %} {% block extra_styles %} 
+{% extends "base.html" %} {% load i18n %} {% block title %} {% trans "Courses" %} {% endblock title %} {% block extra_styles %} 
 {% comment "Link to main.css managed in base.html" %}{% endcomment %} {% endblock %} {% block content %}
 <div class="container py-5">
   <!-- Header Section -->
@@ -40,7 +40,7 @@
             id="globalQuery"
             class="query-input"
 
-            placeholder="Search for resources..."
+            placeholder={% trans "Search for resources..." %}
 
             autocomplete="off"
             value="{{ request.GET.q|default:'' }}"
