--- a/Plateforme/templates/resources/corpus_list.html
+++ b/Plateforme/templates/resources/corpus_list.html
@@ -30,7 +30,7 @@
                            id="globalQuery" 
                            class="query-input" 
 
-                           placeholder="Search for resources..." 
+                           placeholder={% trans "Search for resources..." %}
 
                            autocomplete="off"
                            value="{{ request.GET.q|default:'' }}">
