--- a/Plateforme/templates/resources/tool_list.html
+++ b/Plateforme/templates/resources/tool_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load i18n %} {% block title %} {% trans "NLPTools"%} {% endblock title %} {% block extra_styles %} 
+{% extends "base.html" %} {% load i18n %} {% block title %} {% trans "NLPTools" %} {% endblock title %} {% block extra_styles %} 
 {% comment "Link to main.css managed in base.html" %} {% endcomment %} {% endblock %} 
 {% block content %}
 <div class="container py-5">
@@ -41,7 +41,7 @@
             id="globalQuery"
             class="query-input"
 
-            placeholder="Search for resources..."
+            placeholder={% trans "Search for resources..." %}
 
             autocomplete="off"
             value="{{ request.GET.q|default:'' }}"
@@ -85,7 +85,7 @@
         </div>
         <div class="info-row">
           <span class="info-label">{% trans "Type:" %}</span>
-          <span class="info-value">{% trans {{ tool.get_tool_type_display }}%}</span>
+          <span class="info-value">{{ tool.get_tool_type_display }}</span>
         </div>
         <div class="info-row">
           <span class="info-label">{% trans "Author:" %}</span>
