--- a/Plateforme/templates/base.html
+++ b/Plateforme/templates/base.html
@@ -289,10 +289,8 @@
                         <h4>{% trans "Arabic NLP Platform" %} </h4>
                         <p>{% trans "platform dedicated to advancing Arabic natural language processing through shared resources, tools, and community collaboration." %}</p>
                         <div class="social-links">
-                            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                            <a href="https://www.facebook.com/AALADZ.DZ" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.youtube.com/@aaladz" aria-label="Youtube"><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
                     <div class="footer-column">
