--- a/Plateforme/templates/admin/publications.html
+++ b/Plateforme/templates/admin/publications.html
@@ -217,7 +217,7 @@
         id="search"
         name="search"
         value="{{ request.GET.search }}"
-        placeholder="Title, author..."
+        placeholder={% trans "Title, author..." %}
       />
     </div>
     <div class="form-group">
