--- a/Plateforme/templates/base_admin.html
+++ b/Plateforme/templates/base_admin.html
@@ -26,7 +26,7 @@
             
             <!-- Admin Profile Dropdown -->
             <div class="admin-profile-container">
-                <button class="admin-profile-btn" id="adminProfileBtn" title="Admin">
+                <button class="admin-profile-btn" id="adminProfileBtn" title={% trans "Admin" %}>
                     <div class="admin-avatar-icon">
                         <i class="fas fa-user-shield"></i>
                     </div>
